<!--
 Copyright 2016 Google Inc.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">ZhqDevTools</string>
    <string name="singapore_description">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="placeholder">Placeholder</string>
    <string name="fab_content_description">Star FAB</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="singapore">Singapore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="user_info" translatable="false">姓名：%s，年龄：%s</string>
    <string name="text_show">显示</string>
    <string name="text_gone">隐藏</string>
    <string name="test_content">
        １９７５年二、三月间，一个平平常常的日子，细蒙蒙的雨丝夹着一星半点的雪花，正纷纷淋淋地向大地飘洒着。时令已快到惊蛰，
        雪当然再不会存留，往往还没等落地，就已经消失得无踪无影了。黄土高原严寒而漫长的冬天看来就要过去，但那真正温暖的春天
        还远远地没有到来。
        在这样雨雪交加的日子里，如果没有什么紧要事，人们宁愿一整天足不出户。因此，
        县城的大街小巷倒也比平时少了许多嘈杂。街巷背阴的地方。冬天残留的积雪和冰溜子正在雨点的敲击下蚀化，
        石板街上到处都漫流着肮脏的污水。风依然是寒冷的。空荡荡的街道上，有时会偶尔走过来一个乡下人，破毡帽护着脑门，
        胳膊上挽一筐子土豆或萝卜，有气无力地呼唤着买主。唉，城市在这样的日子里完全丧失了生气，变得没有一点可爱之处了。
        只有在半山腰县立高中的大院坝里，此刻却自有一番热闹景象。午饭铃声刚刚响过，从一排排高低错落的石窑洞里，就跑出来了一群一伙的男男女女。他们把碗筷敲得震天价响，踏泥带水、
        叫叫嚷嚷地跑过院坝，向南面总务处那一排窑洞的墙根下蜂涌而去。偌大一个院子，霎时就被这纷乱的人群踩踏成了一片烂泥滩。与此同时，
        那些家在本城的走读生们，也正三三两两涌出东面学校的大门。他们撑着雨伞，一路说说笑笑，通过一段早年间用横石片插起的长长的下坡路，不多时便纷纷消失在城市的大街小巷中。
在校园内的南墙根下，现在已经按班级排起了十几路纵队。各班的值日生正在忙碌地给众人分饭菜。每个人的饭菜都是昨天登记好并付了饭票的，
        因此程序并不复杂，现在值日生只是按饭表付给每人预订的一份。菜分甲、乙、丙三等。甲菜以土豆、白菜、粉条为主，里面有些叫人嘴馋的大肉片，每份三毛钱；
        乙菜其它内容和甲菜一样，只是没有肉，每份一毛五分钱。丙菜可就差远了，清水煮白萝卜——似乎只是为了掩饰这过分的清淡，
        才在里面象征性地漂了几点辣子油花。不过，这菜价钱倒也便宜，每份五分钱。

各班的甲菜只是在小脸盆里盛一点，看来吃得起肉菜的学生没有几个。丙菜也用小脸盆盛一点，说明吃这种下等伙食的人也没有多少。
        只有乙菜各班都用烧瓷大脚盆盛着，海海漫漫的，显然大部分人都吃这种既不奢侈也不寒酸的菜。主食也分三等：白面馍，玉米面馍，高粱面馍；白、黄、黑，颜色就表明了一种差别；学生们戏称欧洲、亚洲、非洲。
    </string>
</resources>
